changed theme to make disqus work

--- a/themes/cocoa-hugo-theme-master/layouts/partials/disqus.html
+++ b/themes/cocoa-hugo-theme-master/layouts/partials/disqus.html
@@ -2,8 +2,7 @@
 <script type="text/javascript">
 
 (function() {
-      // Don't ever inject Disqus on localhost--it creates unwanted
-      // discussions from 'localhost:1313' on your Disqus account...
+      // Please don't inject Disqus on localhost
       if (window.location.hostname == "localhost")
                 return;
 
