--- a/themes/cocoa-hugo-theme-master/layouts/blog/single.html
+++ b/themes/cocoa-hugo-theme-master/layouts/blog/single.html
@@ -26,7 +26,7 @@
             </div>
             <br>
             <div class="disqus">
-                {{ template "_internal/disqus.html" . }}
+                {{ partial "disqus.html" . }}
             </div>
         </div>
     </div>
