new blog on Wang paper

--- a/themes/cocoa-hugo-theme/layouts/partials/footer_scripts.html
+++ b/themes/cocoa-hugo-theme/layouts/partials/footer_scripts.html
@@ -11,3 +11,13 @@
     hljs.initHighlightingOnLoad();
   </script>
 {{ end }}
+
+    <!-- LaTeX math rendering -->
+    {{ if or .Params.math .Site.Params.math }}
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']] } });
+    </script>
+    <script async src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
+    {{ end }}
+
+
