--- a/themes/cocoa-hugo-theme/dev/less/util.less
+++ b/themes/cocoa-hugo-theme/dev/less/util.less
@@ -28,9 +28,6 @@
     font-family: @heading-font-stack;
     letter-spacing: -0.005rem;
     font-weight: 700;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-smoothing: antialiased;
     color: @black;
 }
 
@@ -43,6 +40,7 @@
     -moz-transition:    @transition;
     -ms-transition:     @transition;
     -o-transition:      @transition;
+    transition:      @transition;
 }
 
 .user-select(@user-select) {
