--- a/themes/cocoa-hugo-theme/dev/less/markdown.less
+++ b/themes/cocoa-hugo-theme/dev/less/markdown.less
@@ -110,12 +110,20 @@ ul {
     margin-bottom: 1.25rem;
 }
 
-li {
+ul li {
     list-style-type: disc;
-    list-style-position: inside;
 }
 
-// Miscenllaneous
+ol li {
+    list-style-type: decimal;
+}
+
+li {
+    list-style-position: outside;
+    margin-left: 1em;
+}
+
+// Miscellaneous
 
 em {
     font-style: italic;
