--- a/themes/cocoa-hugo-theme/layouts/index.html
+++ b/themes/cocoa-hugo-theme/layouts/index.html
@@ -10,9 +10,9 @@
             {{ $totalpostscount := len (where .Data.Pages "Section" "blog") }}
             {{ $latestpostscount := .Site.Params.latestpostscount | default $totalpostscount }}
             {{ if gt $latestpostscount 0 }}
-              <div class="page-heading">{{ i18n "latestPosts" }}</div>
+                <div class="page-heading">{{ i18n "latestPosts" }}</div>
                 <ul>
-                    {{ range (first $latestpostscount (where .Data.Pages.ByPublishDate "Section" "blog")) }}
+                    {{ range (first $latestpostscount (where .Data.Pages.ByPublishDate.Reverse "Section" "blog")) }}
                         {{ partial "li.html" . }}
                     {{ end }}
                     {{ if gt $totalpostscount $latestpostscount }}
@@ -23,8 +23,8 @@
                         {{ end }}
                     {{ end }}
                 </ul>
-              </div>
             {{ end }}
+        </div>
     </div>
 </section>
 {{ partial "footer.html" . }}
