--- a/themes/cocoa-hugo-theme/layouts/partials/head_includes.html
+++ b/themes/cocoa-hugo-theme/layouts/partials/head_includes.html
@@ -13,7 +13,7 @@
 <!-- CSS -->
 
 {{ if .Site.Params.highlightjs }}
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/default.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/{{ .Site.Params.highlightjsStyle | default "default" }}.min.css">
 {{ end }}
 
 <!-- Fonts and icon CSS -->
@@ -51,6 +51,13 @@
 >
 
 <!-- RSS -->
-{{ if .RSSLink }}
+{{ if and .Site.Params.include_rss .RSSLink }}
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
+
+<!-- gitalk -->
+{{ if .Site.Params.gitalk }}
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+{{ end }}
+<!-- End gitalk Code -->
